milestone 8: property search
